--- a/ds.properties
+++ b/ds.properties
@@ -1,2 +1,2 @@
-student = Hello KPI studenttttttttttttttttt
-diploma = Hello KPI diplomassssssssssssssss
+student = Hello KPI student
+diploma = Hello KPI diplomas
