--- a/ds.properties
+++ b/ds.properties
@@ -1,2 +1,2 @@
-diploma = Hello KPI diplomas ngrok2+++++
-student = Hello KPI students ngrok2222222222++++
+diploma = Hello KPI diplomas ngrok2
+student = Hello KPI students ngrok2
