--- a/ds.properties
+++ b/ds.properties
@@ -1,2 +1,2 @@
-diploma = Hello KPI diplomas ngrok20++++
+diploma = Hello KPI diplomas ngrok20++++///------00000
 student = Hello KPI students ngrok2++++++///////////////////
