--- a/ds.properties
+++ b/ds.properties
@@ -1,2 +1,2 @@
 diploma = Hello KPI diplomas ngrok
-student = Hello KPI students ngrok2++++++///////////////////
+student = Hello KPI students ngrok
