--- a/ds.properties
+++ b/ds.properties
@@ -1,2 +1,2 @@
-diploma = Hello KPI diplomas +++++
-student = Hello KPI students ngrok++++++lab
+diploma = Hello KPI diplomas serg
+student = Hello KPI students serg
