--- a/ds.properties
+++ b/ds.properties
@@ -1,2 +1,2 @@
-diploma = Hello KPI diplomas serg
-student = Hello KPI students serg
+diploma = Hello KPI diplomas valera
+student = Hello KPI students sergio
