--- a/ds.properties
+++ b/ds.properties
@@ -1,2 +1,2 @@
-diploma = Hello KPI diplomas //
-student = Hello KPI students //
+diploma = Hello KPI diplomas //+++
+student = Hello KPI students //+++
