--- a/ds.properties
+++ b/ds.properties
@@ -1,2 +1,2 @@
-diploma = Hello KPI diplomas //+++555555
-student = Hello KPI students //+++556666667
+diploma = Hello KPI diplomas
+student = Hello KPI students
